--- a/scripts/R38_GF_RNAseq.Rmd
+++ b/scripts/R38_GF_RNAseq.Rmd
@@ -299,6 +299,78 @@ combined_pca_plot <- pca_plot_si + pca_plot_li+
 print(combined_pca_plot)
 ggsave('../data/R38_pca_gf_split.png', width = 10)
 ```
+## specific pca of subset samples
+
+```{r}
+# --- Step 1: Prepare a Reusable PCA Plotting Function ---
+# This function takes a subset of the data and generates a PCA plot.
+# The 'group_variable' tells the plot how to color the points (e.g., by "treatment" or by "water").
+
+generate_pca_plot <- function(counts_matrix, meta_subset, group_variable, plot_title) {
+  
+  # Subset the counts matrix to include only the samples in the metadata subset
+  counts_subset <- counts_matrix[, meta_subset$sample_id]
+  
+  # Create the DESeq2 object for the subset
+  # The design formula is now flexible based on the group_variable
+  dds_subset <- DESeqDataSetFromMatrix(
+    countData = counts_subset,
+    colData = meta_subset,
+    design = as.formula(paste("~", group_variable))
+  )
+  
+  # Apply the variance stabilizing transformation
+  vst_subset <- vst(dds_subset, blind = TRUE)
+  
+  # Generate the PCA plot, coloring by the specified group_variable
+  pca_plot <- plotPCA(vst_subset, intgroup = group_variable) +
+    ggtitle(plot_title) +
+    theme_minimal(base_size = 14) +
+    coord_fixed()
+  
+  return(pca_plot)
+}
+```
+
+
+```{r}
+# --- Step 2: Analyze Colonization Effect (Regular Water Samples) ---
+
+# Filter metadata for regular water samples in both tissues
+meta_si_regular <- meta_table %>% filter(tissue == "small_intestine", diet_treatment == "regular_water")
+meta_li_regular <- meta_table %>% filter(tissue == "large_intestine", diet_treatment == "regular_water")
+
+# Generate PCA plots comparing PBS vs E. faecalis
+pca_si_col <- generate_pca_plot(filtered_raw_counts_matrix, meta_si_regular, "treatment", "SI: Colonization Effect")
+pca_li_col <- generate_pca_plot(filtered_raw_counts_matrix, meta_li_regular, "treatment", "LI: Colonization Effect")
+
+# Combine into a single figure
+colonization_plot <- plot_grid(pca_si_col, pca_li_col, ncol = 2, labels = c("A", "B"))
+save_plot("../data/pca_colonization_effect.jpg", colonization_plot, base_height = 6, base_width = 12)
+print(colonization_plot)
+```
+
+
+```{r}
+# --- Step 3: Analyze Sucrose Effect (E. faecalis Samples) ---
+
+# Filter metadata for E. faecalis samples in both tissues
+meta_si_faecalis <- meta_table %>% filter(tissue == "small_intestine", gavage_treatment == "E. faecalis")
+meta_li_faecalis <- meta_table %>% filter(tissue == "large_intestine", gavage_treatment == "E. faecalis")
+
+# Generate PCA plots comparing regular_water vs sucrose_water
+pca_si_suc <- generate_pca_plot(filtered_raw_counts_matrix, meta_si_faecalis, "treatment", "SI: Sucrose Effect")
+pca_li_suc <- generate_pca_plot(filtered_raw_counts_matrix, meta_li_faecalis, "treatment", "LI: Sucrose Effect")
+
+# Combine into a single figure
+sucrose_plot <- plot_grid(pca_si_suc, pca_li_suc, ncol = 2, labels = c("C", "D"))
+save_plot("../data/pca_sucrose_effect.jpg", sucrose_plot, base_height = 6, base_width = 12)
+print(sucrose_plot)
+
+
+```
+
+
 
 # Differential gene expression analysis
 
@@ -1432,154 +1504,128 @@ all_counts_si <- genes_to_plot %>%
 
 ```
 
-### Colonization effects
+
+## 4 heatmaps
 
 ```{r}
-each_width <- 4
-each_height <- 6
 # --- Step 2: Prepare a Reusable Heatmap Plotting Function ---
-# This function will take a tidy dataframe and generate a heatmap.
+# This function will take tidy counts, tissue name, and effect type to generate a heatmap object
 
-generate_tissue_heatmap <- function(tidy_counts_df, tissue_name) {
+generate_heatmap_grob <- function(tidy_counts_df, tissue_name, effect_type, show_legend = FALSE) {
   
-  # Filter for the genes of interest
-  plot_data_tidy <- tidy_counts_df %>%
-    filter(gene %in% genes_to_plot)%>%
-    filter(str_detect(treatment, "regular_water"))
+  # Filter data based on the effect type
+  if (effect_type == "Colonization") {
+    plot_data_tidy <- tidy_counts_df %>% filter(str_detect(treatment, "regular_water"))
+    main_title <- paste(tissue_name, "- Colonization Effect")
+    treatment_colors <- setNames(c("#A2E8E6", "#00BFC4"), c("PBS__regular_water", "E. faecalis__regular_water"))
+  } else if (effect_type == "Sucrose") {
+    plot_data_tidy <- tidy_counts_df %>% filter(str_detect(treatment, "E. faecalis"))
+    main_title <- paste(tissue_name, "- Sucrose Effect")
+    treatment_colors <- setNames(c("#00BFC4", "#F8766D"), c("E. faecalis__regular_water", "E. faecalis__sucrose_water"))
+  }
   
-  # Convert the tidy data to a matrix for pheatmap
+  # Filter for genes of interest
+  plot_data_tidy <- plot_data_tidy %>% filter(gene %in% genes_to_plot)
+  
+  # Convert to matrix
   plot_matrix <- plot_data_tidy %>%
     dplyr::select(gene, sample_name, count) %>%
     pivot_wider(names_from = sample_name, values_from = count) %>%
     column_to_rownames("gene")
   
-  # Create the annotation for the columns (samples)
-  annotation_col <- plot_data_tidy %>%
-    dplyr::select(sample_name, treatment) %>% # Can add other columns like 'water' if needed
-    distinct() %>%
-    column_to_rownames("sample_name")
-  
-  # Create the annotation for the rows (genes)
-  annotation_row <- data.frame(
-    Pathway = case_when(
-      rownames(plot_matrix) %in% prolif_genes ~ "Proliferation",
-      rownames(plot_matrix) %in% immune_genes ~ "Immune Response"
-    )
-  )
+  # Create annotations
+  annotation_col <- plot_data_tidy %>% dplyr::select(sample_name, treatment) %>% distinct() %>% column_to_rownames("sample_name")
+  annotation_row <- data.frame(Pathway = case_when(
+    rownames(plot_matrix) %in% prolif_genes ~ "Proliferation",
+    rownames(plot_matrix) %in% immune_genes ~ "Immune Response"
+  ))
   rownames(annotation_row) <- rownames(plot_matrix)
   
-  # Order the matrix and annotations by Pathway for clean paneling
+  # Order rows
   annotation_row <- annotation_row %>% arrange(Pathway)
   plot_matrix <- plot_matrix[rownames(annotation_row), ]
   
-  # Calculate the positions for the gaps between gene groups
+  # Gaps and colors
   gaps_row <- table(annotation_row$Pathway) %>% cumsum() %>% head(-1)
+  ann_colors <- list(treatment = treatment_colors, Pathway = c(Proliferation = "#D95F02", `Immune Response` = "purple"))
   
-  # Define custom colors
-  ann_colors <- list(
-    treatment = setNames(c("#A2E8E6", "#00BFC4"),
-                         c("PBS__regular_water", "E. faecalis__regular_water")),
-    Pathway = c(Proliferation = "#D95F02", `Immune Response` = "purple")
-  )
-  
-  # Generate the heatmap
+  # Generate heatmap as a grob object
   pheatmap(
-    plot_matrix,
-    main = paste(tissue_name, "- Colonization Effect"),
-    annotation_col = annotation_col,
-    annotation_row = annotation_row,
-    annotation_colors = ann_colors,
-    scale = "row", # Scale genes to have mean 0 and SD 1 (Z-score)
-    cluster_cols = F, # Cluster samples by similarity
-    cluster_rows = FALSE, # Keep the defined pathway grouping
-    gaps_row = gaps_row, # Add a visual gap between pathways
-    show_rownames = F,
-    fontsize_row = 10,
-    filename = paste0("../data/gsea_leading_edge_heatmap_Colonization_", gsub(" ", "_", tissue_name), ".jpg"),
-    width = each_width,
-    height = each_height
-  )
+    plot_matrix, main = main_title, annotation_col = annotation_col,
+    annotation_row = annotation_row, annotation_colors = ann_colors,
+    scale = "row", cluster_cols = F, cluster_rows = FALSE,
+    gaps_row = gaps_row, show_rownames = F, fontsize_row = 8,
+    legend = T, annotation_legend = F, # Turn legends off
+    silent = TRUE
+  )$gtable
 }
 
-# --- Step 3: Generate the Two Heatmaps ---
+# --- Step 3: Generate the Four Heatmap Grobs ---
+
+# Small Intestine Plots
+p_si_col <- generate_heatmap_grob(all_counts_si, "Small Intestine", "Colonization")
+p_si_suc <- generate_heatmap_grob(all_counts_si, "Small Intestine", "Sucrose")
+
+# Large Intestine Plots
+p_li_col <- generate_heatmap_grob(all_counts_li, "Large Intestine", "Colonization")
+p_li_suc <- generate_heatmap_grob(all_counts_li, "Large Intestine", "Sucrose") # Show legend on one plot
+
+# --- Step 4: Create a Shared Legend ---
+
+# Define all possible annotation levels and their colors
+all_treatment_colors <- setNames(
+    c("#A2E8E6", "#00BFC4", "#F8766D"),
+    c("PBS__regular_water", "E. faecalis__regular_water", "E. faecalis__sucrose_water")
+)
+all_pathway_colors <- setNames(c("#D95F02", "purple"), c("Proliferation", "Immune Response"))
+all_ann_colors <- list(treatment = all_treatment_colors, Pathway = all_pathway_colors)
+
+# Create dummy data that includes all these levels to ensure they appear in the legend
+dummy_matrix <- matrix(1:6, nrow = 2, dimnames = list(c("G1", "G2"), c("S1", "S2", "S3")))
+dummy_ann_col <- data.frame(treatment = names(all_treatment_colors))
+rownames(dummy_ann_col) <- c("S1", "S2", "S3")
+dummy_ann_row <- data.frame(Pathway = names(all_pathway_colors))
+rownames(dummy_ann_row) <- c("G1", "G2")
+
+# Generate a dummy heatmap just to steal its legend
+legend_hm <- pheatmap(
+    dummy_matrix, annotation_col = dummy_ann_col, annotation_row = dummy_ann_row,
+    annotation_colors = all_ann_colors, legend = TRUE, annotation_legend = TRUE,
+    silent = TRUE
+)
+shared_legend <- legend_hm$gtable$grobs[[which(legend_hm$gtable$layout$name == "legend")]]
 
 
-# Generate the heatmap for the Small Intestine
-generate_tissue_heatmap(all_counts_si, "Small Intestine")
+# --- Step 5: Arrange Plots into a Final Figure ---
 
-# Generate the heatmap for the Large Intestine
-generate_tissue_heatmap(all_counts_li, "Large Intestine")
+# Combine the four heatmap panels
+p_grid <- plot_grid(
+  p_si_col, p_si_suc,
+  p_li_col, p_li_suc,
+  ncol = 2,
+  align = 'hv'
+)
 
-####################################### sucrose effects
-
-generate_tissue_heatmap_sucrose <- function(tidy_counts_df, tissue_name) {
-  
-  # Filter for the genes of interest
-  plot_data_tidy <- tidy_counts_df %>%
-    filter(gene %in% genes_to_plot)%>%
-    filter(str_detect(treatment, "E. faecalis"))
-  
-  # Convert the tidy data to a matrix for pheatmap
-  plot_matrix <- plot_data_tidy %>%
-    dplyr::select(gene, sample_name, count) %>%
-    pivot_wider(names_from = sample_name, values_from = count) %>%
-    column_to_rownames("gene")
-  
-  # Create the annotation for the columns (samples)
-  annotation_col <- plot_data_tidy %>%
-    dplyr::select(sample_name, treatment) %>% # Can add other columns like 'water' if needed
-    distinct() %>%
-    column_to_rownames("sample_name")
-  
-  # Create the annotation for the rows (genes)
-  annotation_row <- data.frame(
-    Pathway = case_when(
-      rownames(plot_matrix) %in% prolif_genes ~ "Proliferation",
-      rownames(plot_matrix) %in% immune_genes ~ "Immune Response"
-    )
+# Create a title for the entire figure
+caption <- ggdraw() + 
+  draw_label(
+    "Gene Expression of Key Pathways Across Tissues and Treatments",
+    fontface = 'bold', x = 0.5
   )
-  rownames(annotation_row) <- rownames(plot_matrix)
-  
-  # Order the matrix and annotations by Pathway for clean paneling
-  annotation_row <- annotation_row %>% arrange(Pathway)
-  plot_matrix <- plot_matrix[rownames(annotation_row), ]
-  
-  # Calculate the positions for the gaps between gene groups
-  gaps_row <- table(annotation_row$Pathway) %>% cumsum() %>% head(-1)
-  
-  # Define custom colors
-  ann_colors <- list(
-    treatment = setNames(c("#00BFC4", "#F8766D"),
-                         c("E. faecalis__regular_water", "E. faecalis__sucrose_water")),
-    Pathway = c(Proliferation = "#D95F02", `Immune Response` = "purple")
-  )
-       
-  # Generate the heatmap
-  pheatmap(
-    plot_matrix,
-    main = paste(tissue_name, "- Sucrose Effect"),
-    annotation_col = annotation_col,
-    annotation_row = annotation_row,
-    annotation_colors = ann_colors,
-    scale = "row", # Scale genes to have mean 0 and SD 1 (Z-score)
-    cluster_cols = F, # Cluster samples by similarity
-    cluster_rows = FALSE, # Keep the defined pathway grouping
-    gaps_row = gaps_row, # Add a visual gap between pathways
-    show_rownames = F,
-    fontsize_row = 10,
-    filename = paste0("../data/gsea_leading_edge_heatmap_sucrose_", gsub(" ", "_", tissue_name), ".jpg"),
-    width = each_width,
-    height = each_height
-  )
-}
 
-# --- Step 3: Generate the Two Heatmaps ---
+title <- ggdraw() + 
+  draw_label("Supplemental Fig X",fontface = 'bold', x = 0,hjust = 0) +
+  theme(plot.margin = margin(0, 0, 0, 0))
 
+combined <- plot_grid(
+  title, caption,shared_legend,p_grid,
+  ncol = 1,
+  # rel_heights values control vertical title margins
+  rel_heights = c(0.05, 0.05, 0.1, 1)
+) +theme(plot.margin = unit(c(1,1,1,1), "cm"))
 
-# Generate the heatmap for the Small Intestine
-generate_tissue_heatmap_sucrose(all_counts_si, "Small Intestine")
-
-# Generate the heatmap for the Large Intestine
-generate_tissue_heatmap_sucrose(all_counts_li, "Large Intestine")
+ggsave('../data/R38_combined_heatmaps_figure_top_legend.pdf',
+      width = 8.5, height = 11, units = "in", device = 'pdf', 
+      dpi = 300)  
 ```
 
